[gd_scene load_steps=26 format=3 uid="uid://bn0rlapy8ytg5"]

[ext_resource type="Script" path="res://scenes/game/character/single_moot.gd" id="1_xa180"]
[ext_resource type="Script" path="res://scenes/game/character/single_load_skin.gd" id="2_s1tag"]
[ext_resource type="Script" path="res://scenes/game/character/teleporter.gd" id="3_nvr42"]
[ext_resource type="Texture2D" uid="uid://bok5q7sxwnfus" path="res://assets/sprites/character/guidelines/Head.png" id="4_cpee1"]
[ext_resource type="Texture2D" uid="uid://drypq4jdrky7g" path="res://assets/sprites/character/guidelines/3_piece.png" id="5_dljt4"]
[ext_resource type="Texture2D" uid="uid://die5me60kg1r5" path="res://assets/sprites/character/guidelines/4_piece.png" id="6_20m7o"]
[ext_resource type="Texture2D" uid="uid://bxptvxqf04n31" path="res://assets/sprites/ui/images-removebg-preview (1).png" id="8_difoc"]
[ext_resource type="Script" path="res://scenes/game/modules/single_weapon_collision.gd" id="9_067pa"]
[ext_resource type="Texture2D" uid="uid://cnhkrdor3gjqg" path="res://assets/sprites/character/guidelines/2_piece.png" id="9_luf3u"]
[ext_resource type="PackedScene" uid="uid://cfps4j761fr03" path="res://scenes/game/modules/joy_stick.tscn" id="10_26g1d"]
[ext_resource type="PackedScene" uid="uid://c2khg3vqn4pur" path="res://scenes/game/modules/single_character.tscn" id="11_m8iib"]

[sub_resource type="CircleShape2D" id="CircleShape2D_25o0j"]
radius = 137.015

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_43pqx"]
radius = 60.0
height = 362.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_u5tso"]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 3
particles_anim_loop = false

[sub_resource type="Gradient" id="Gradient_wo1n6"]
offsets = PackedFloat32Array(0, 0.734266, 1)
colors = PackedColorArray(0.88174, 0.613124, 0, 1, 0.612305, 0.351739, 0, 1, 0.764706, 0.0823529, 0.0784314, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_glu58"]
gradient = SubResource("Gradient_wo1n6")

[sub_resource type="Curve" id="Curve_oo2nx"]
_data = [Vector2(0, 0.810526), 0.0, 0.0, 0, 0, Vector2(1, 0.442105), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_b8bp6"]
curve = SubResource("Curve_oo2nx")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_m6gxl"]
lifetime_randomness = 1.0
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 250.0
emission_ring_inner_radius = 225.0
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
spread = 0.0
gravity = Vector3(0, 0, 0)
angular_velocity_max = 720.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
linear_accel_max = 100.0
radial_accel_max = 100.0
tangential_accel_max = 100.0
angle_max = 720.0
scale_min = 0.5
scale_max = 0.7
scale_curve = SubResource("CurveTexture_b8bp6")
color_ramp = SubResource("GradientTexture1D_glu58")
anim_offset_max = 1.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s5orv"]
radius = 60.0
height = 348.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gajxb"]
radius = 62.0322

[sub_resource type="CircleShape2D" id="CircleShape2D_utttm"]
radius = 62.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kr26e"]
radius = 60.0
height = 242.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bstav"]
radius = 60.0333
height = 461.142

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mmmxm"]
radius = 60.3683
height = 481.231

[node name="Moot" type="Node2D"]
script = ExtResource("1_xa180")

[node name="Extra" type="Node2D" parent="."]

[node name="Center" type="Marker2D" parent="Extra"]
position = Vector2(0, 400)

[node name="Reach" type="Marker2D" parent="Extra/Center"]
position = Vector2(850, 0)

[node name="HitCooldown" type="Timer" parent="Extra"]
one_shot = true

[node name="SkillCooldown" type="Timer" parent="Extra"]
one_shot = true

[node name="SkillDuration" type="Timer" parent="Extra"]
one_shot = true

[node name="DoubleJoyStick" parent="Extra" instance=ExtResource("10_26g1d")]

[node name="InvulnerabilityCooldown" type="Timer" parent="Extra"]
one_shot = true

[node name="Character" parent="Extra" instance=ExtResource("11_m8iib")]

[node name="LocalCharacter" type="Node2D" parent="."]
script = ExtResource("2_s1tag")

[node name="Head" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable", "Damager"]]
position = Vector2(0, -120)
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_nvr42")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/Head"]
position = Vector2(0, -105)
texture = ExtResource("4_cpee1")

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="LocalCharacter/Head"]
position = Vector2(0, -135)
shape = SubResource("CircleShape2D_25o0j")

[node name="HB" type="DampedSpringJoint2D" parent="LocalCharacter/Head"]
position = Vector2(-57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="HB2" type="DampedSpringJoint2D" parent="LocalCharacter/Head"]
position = Vector2(57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="HB3" type="PinJoint2D" parent="LocalCharacter/Head"]
node_a = NodePath("..")
node_b = NodePath("../../Body")

[node name="HB4" type="DampedSpringJoint2D" parent="LocalCharacter/Head"]
position = Vector2(-57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="HB5" type="DampedSpringJoint2D" parent="LocalCharacter/Head"]
position = Vector2(57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="Body" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
mass = 0.1
center_of_mass_mode = 1
center_of_mass = Vector2(0, -107)
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_nvr42")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/Body"]
texture = ExtResource("5_dljt4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/Body"]
shape = SubResource("CapsuleShape2D_43pqx")

[node name="FireRing" type="GPUParticles2D" parent="LocalCharacter/Body"]
material = SubResource("CanvasItemMaterial_u5tso")
position = Vector2(0, 400)
scale = Vector2(3.5, 3.5)
emitting = false
amount = 1000
sub_emitter = NodePath(".")
process_material = SubResource("ParticleProcessMaterial_m6gxl")
texture = ExtResource("8_difoc")
local_coords = true

[node name="RLA" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(240, 0)
rotation = 1.5708
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_nvr42")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/RLA"]
position = Vector2(-0.000427246, -120)
texture = ExtResource("5_dljt4")

[node name="RRA" type="DampedSpringJoint2D" parent="LocalCharacter/RLA"]
position = Vector2(57.0001, -1.52588e-05)
node_a = NodePath("../../RUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RRA2" type="DampedSpringJoint2D" parent="LocalCharacter/RLA"]
position = Vector2(-57, 1.52588e-05)
node_a = NodePath("../../RUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RRA3" type="PinJoint2D" parent="LocalCharacter/RLA"]
rotation = -1.5708
node_a = NodePath("../../RUA")
node_b = NodePath("..")

[node name="RRA4" type="DampedSpringJoint2D" parent="LocalCharacter/RLA"]
position = Vector2(57.0001, -1.52588e-05)
node_a = NodePath("../../RUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RRA5" type="DampedSpringJoint2D" parent="LocalCharacter/RLA"]
position = Vector2(-57, 1.52588e-05)
node_a = NodePath("../../RUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/RLA"]
position = Vector2(-0.000396729, -113)
shape = SubResource("CapsuleShape2D_s5orv")

[node name="RUA" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
rotation = 1.5708
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_nvr42")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/RUA"]
position = Vector2(-0.000442505, -120)
texture = ExtResource("5_dljt4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/RUA"]
position = Vector2(-0.000442505, -120)
shape = SubResource("CapsuleShape2D_43pqx")

[node name="BRA" type="DampedSpringJoint2D" parent="LocalCharacter/RUA"]
position = Vector2(57, -1.14441e-05)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BRA2" type="DampedSpringJoint2D" parent="LocalCharacter/RUA"]
position = Vector2(-57, 1.14441e-05)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BRA3" type="PinJoint2D" parent="LocalCharacter/RUA"]
rotation = -1.5708
node_a = NodePath("../../Body")
node_b = NodePath("..")

[node name="BRA4" type="DampedSpringJoint2D" parent="LocalCharacter/RUA"]
position = Vector2(57, -1.14441e-05)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BRA5" type="DampedSpringJoint2D" parent="LocalCharacter/RUA"]
position = Vector2(-57, 1.14441e-05)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="RF" type="RigidBody2D" parent="LocalCharacter" groups=["Damager"]]
position = Vector2(480, 0)
mass = 0.1
gravity_scale = 0.0
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_nvr42")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/RF"]
shape = SubResource("CircleShape2D_gajxb")

[node name="RF" type="PinJoint2D" parent="LocalCharacter/RF"]
node_a = NodePath("../../RLA")
node_b = NodePath("..")
bias = 0.9

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/RF"]
script = ExtResource("9_067pa")

[node name="RRA" type="DampedSpringJoint2D" parent="LocalCharacter/RF"]
position = Vector2(0, -59)
rotation = 1.5708
node_a = NodePath("../../RLA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RRA2" type="DampedSpringJoint2D" parent="LocalCharacter/RF"]
position = Vector2(0, 59)
rotation = 1.5708
node_a = NodePath("../../RLA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RRA4" type="DampedSpringJoint2D" parent="LocalCharacter/RF"]
position = Vector2(0, -59)
rotation = 1.5708
node_a = NodePath("../../RLA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RRA5" type="DampedSpringJoint2D" parent="LocalCharacter/RF"]
position = Vector2(0, 59)
rotation = 1.5708
node_a = NodePath("../../RLA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="LLA" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(-240, 0)
rotation = -1.5708
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_nvr42")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/LLA"]
position = Vector2(0.000473022, -120)
texture = ExtResource("5_dljt4")

[node name="LLA" type="DampedSpringJoint2D" parent="LocalCharacter/LLA"]
position = Vector2(57, 0)
node_a = NodePath("../../LUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="LLA2" type="DampedSpringJoint2D" parent="LocalCharacter/LLA"]
position = Vector2(57, 0)
node_a = NodePath("../../LUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="LLA3" type="PinJoint2D" parent="LocalCharacter/LLA"]
rotation = -1.5708
node_a = NodePath("../../LUA")
node_b = NodePath("..")

[node name="LLA4" type="DampedSpringJoint2D" parent="LocalCharacter/LLA"]
position = Vector2(57, 0)
node_a = NodePath("../../LUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="LLA5" type="DampedSpringJoint2D" parent="LocalCharacter/LLA"]
position = Vector2(57, 0)
node_a = NodePath("../../LUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/LLA"]
position = Vector2(0.000473022, -113)
shape = SubResource("CapsuleShape2D_s5orv")

[node name="LUA" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
rotation = 1.5708
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_nvr42")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/LUA"]
position = Vector2(0.000442505, 120)
texture = ExtResource("5_dljt4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/LUA"]
position = Vector2(0.000442505, 120)
shape = SubResource("CapsuleShape2D_43pqx")

[node name="BLA" type="DampedSpringJoint2D" parent="LocalCharacter/LUA"]
position = Vector2(57.0001, -1.14441e-05)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BLA2" type="DampedSpringJoint2D" parent="LocalCharacter/LUA"]
position = Vector2(-57, 1.14441e-05)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BLA3" type="PinJoint2D" parent="LocalCharacter/LUA"]
rotation = -1.5708
node_a = NodePath("../../Body")
node_b = NodePath("..")

[node name="BLA4" type="DampedSpringJoint2D" parent="LocalCharacter/LUA"]
position = Vector2(57.0001, -1.14441e-05)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BLA5" type="DampedSpringJoint2D" parent="LocalCharacter/LUA"]
position = Vector2(-57, 1.14441e-05)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="LF" type="RigidBody2D" parent="LocalCharacter" groups=["Damager"]]
position = Vector2(-480, 0)
mass = 0.1
gravity_scale = 0.0
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_nvr42")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/LF"]
shape = SubResource("CircleShape2D_gajxb")

[node name="LF" type="PinJoint2D" parent="LocalCharacter/LF"]
node_a = NodePath("../../LLA")
node_b = NodePath("..")

[node name="LK" type="RigidBody2D" parent="LocalCharacter" groups=["Damager"]]
position = Vector2(-360, 984)
mass = 0.01
gravity_scale = 0.0
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_nvr42")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/LK"]
shape = SubResource("CircleShape2D_utttm")

[node name="LK" type="PinJoint2D" parent="LocalCharacter/LK"]
node_a = NodePath("../../LLL")
node_b = NodePath("..")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/LK"]

[node name="Hip" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(0, 240)
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_nvr42")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/Hip"]
position = Vector2(0, 60)
texture = ExtResource("9_luf3u")

[node name="BH" type="DampedSpringJoint2D" parent="LocalCharacter/Hip"]
position = Vector2(-57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Stomach")
length = 1.0
stiffness = 64.0

[node name="BH2" type="DampedSpringJoint2D" parent="LocalCharacter/Hip"]
position = Vector2(57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Stomach")
length = 1.0
stiffness = 64.0

[node name="BH3" type="PinJoint2D" parent="LocalCharacter/Hip"]
node_a = NodePath("../../Stomach")
node_b = NodePath("..")

[node name="BH4" type="DampedSpringJoint2D" parent="LocalCharacter/Hip"]
position = Vector2(-57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Stomach")
length = 1.0
stiffness = 64.0

[node name="BH5" type="DampedSpringJoint2D" parent="LocalCharacter/Hip"]
position = Vector2(57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Stomach")
length = 1.0
stiffness = 64.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/Hip"]
position = Vector2(0, 60)
shape = SubResource("CapsuleShape2D_kr26e")

[node name="RLL" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(180, 672)
rotation = -0.506145
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_nvr42")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/RLL"]
position = Vector2(0, 180)
texture = ExtResource("6_20m7o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/RLL"]
position = Vector2(0, 170)
shape = SubResource("CapsuleShape2D_bstav")

[node name="RRL" type="DampedSpringJoint2D" parent="LocalCharacter/RLL"]
position = Vector2(59, 0)
node_a = NodePath("..")
node_b = NodePath("../../RUL")
length = 1.0
stiffness = 64.0

[node name="RRL2" type="DampedSpringJoint2D" parent="LocalCharacter/RLL"]
position = Vector2(59, 0)
node_a = NodePath("..")
node_b = NodePath("../../RUL")
length = 1.0
stiffness = 64.0

[node name="RRL3" type="PinJoint2D" parent="LocalCharacter/RLL"]
node_a = NodePath("../../RUL")
node_b = NodePath("..")

[node name="RRL4" type="DampedSpringJoint2D" parent="LocalCharacter/RLL"]
position = Vector2(-59, 0)
node_a = NodePath("..")
node_b = NodePath("../../RUL")
length = 1.0
stiffness = 64.0

[node name="RRL5" type="DampedSpringJoint2D" parent="LocalCharacter/RLL"]
position = Vector2(-59, 0)
node_a = NodePath("..")
node_b = NodePath("../../RUL")
length = 1.0
stiffness = 64.0

[node name="RUL" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(0, 360)
rotation = -0.523599
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_nvr42")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/RUL"]
position = Vector2(0, 180)
texture = ExtResource("6_20m7o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/RUL"]
position = Vector2(0, 180)
shape = SubResource("CapsuleShape2D_mmmxm")

[node name="HRL" type="DampedSpringJoint2D" parent="LocalCharacter/RUL"]
position = Vector2(59, 0)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HRL2" type="DampedSpringJoint2D" parent="LocalCharacter/RUL"]
position = Vector2(59, 0)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HRL3" type="PinJoint2D" parent="LocalCharacter/RUL"]
node_a = NodePath("../../Hip")
node_b = NodePath("..")

[node name="HRL4" type="DampedSpringJoint2D" parent="LocalCharacter/RUL"]
position = Vector2(-59, 0)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HRL5" type="DampedSpringJoint2D" parent="LocalCharacter/RUL"]
position = Vector2(-59, 0)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RK" type="RigidBody2D" parent="LocalCharacter" groups=["Damager"]]
position = Vector2(355, 987)
mass = 0.01
gravity_scale = 0.0
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_nvr42")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/RK"]
shape = SubResource("CircleShape2D_utttm")

[node name="RK" type="PinJoint2D" parent="LocalCharacter/RK"]
node_a = NodePath("../../RLL")
node_b = NodePath("..")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/RK"]

[node name="Stomach" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(0, 120)
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_nvr42")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/Stomach"]
position = Vector2(0, 60)
texture = ExtResource("9_luf3u")

[node name="BH" type="DampedSpringJoint2D" parent="LocalCharacter/Stomach"]
position = Vector2(-57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BH2" type="DampedSpringJoint2D" parent="LocalCharacter/Stomach"]
position = Vector2(57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BH3" type="PinJoint2D" parent="LocalCharacter/Stomach"]
node_a = NodePath("../../Body")
node_b = NodePath("..")

[node name="BH4" type="DampedSpringJoint2D" parent="LocalCharacter/Stomach"]
position = Vector2(-57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BH5" type="DampedSpringJoint2D" parent="LocalCharacter/Stomach"]
position = Vector2(57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/Stomach"]
position = Vector2(0, 60)
shape = SubResource("CapsuleShape2D_kr26e")

[node name="LLL" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(-180, 672)
rotation = 0.523599
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_nvr42")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/LLL"]
position = Vector2(0, 180)
texture = ExtResource("6_20m7o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/LLL"]
position = Vector2(0, 170)
shape = SubResource("CapsuleShape2D_bstav")

[node name="RRL" type="DampedSpringJoint2D" parent="LocalCharacter/LLL"]
position = Vector2(59, 0)
node_a = NodePath("..")
node_b = NodePath("../../LUL")
length = 1.0
stiffness = 64.0

[node name="RRL2" type="DampedSpringJoint2D" parent="LocalCharacter/LLL"]
position = Vector2(59, 0)
node_a = NodePath("..")
node_b = NodePath("../../LUL")
length = 1.0
stiffness = 64.0

[node name="RRL3" type="PinJoint2D" parent="LocalCharacter/LLL"]
node_a = NodePath("../../LUL")
node_b = NodePath("..")

[node name="RRL4" type="DampedSpringJoint2D" parent="LocalCharacter/LLL"]
position = Vector2(-59, 0)
node_a = NodePath("..")
node_b = NodePath("../../LUL")
length = 1.0
stiffness = 64.0

[node name="RRL5" type="DampedSpringJoint2D" parent="LocalCharacter/LLL"]
position = Vector2(-59, 0)
node_a = NodePath("..")
node_b = NodePath("../../LUL")
length = 1.0
stiffness = 64.0

[node name="LUL" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(0, 360)
rotation = 0.523599
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_nvr42")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/LUL"]
position = Vector2(0, 180)
texture = ExtResource("6_20m7o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/LUL"]
position = Vector2(0, 180)
shape = SubResource("CapsuleShape2D_mmmxm")

[node name="HRL" type="DampedSpringJoint2D" parent="LocalCharacter/LUL"]
position = Vector2(59, 0)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HRL2" type="DampedSpringJoint2D" parent="LocalCharacter/LUL"]
position = Vector2(59, 0)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HRL3" type="PinJoint2D" parent="LocalCharacter/LUL"]
node_a = NodePath("../../Hip")
node_b = NodePath("..")

[node name="HRL4" type="DampedSpringJoint2D" parent="LocalCharacter/LUL"]
position = Vector2(-59, 0)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HRL5" type="DampedSpringJoint2D" parent="LocalCharacter/LUL"]
position = Vector2(-59, 0)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0
